# MuseScore

./: CMakeLists.txt
mreader/: CMakeLists.txt  mreader.cpp  mreader.h
